# torch-tile-profiler

./: .gitignore  README.md  pyproject.toml
src/torch_tile_profiler/: __init__.py  cli.py  estimator.py  profiler.py  reports.py  triton_kernels.py  workloads.py
tests/: test_estimator.py
